k8s/base/database-manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/part-of: overkilled-todo
    app.kubernetes.io/component: database
    app.kubernetes.io/managed-by: kustomize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
        app.kubernetes.io/name: mariadb
        app.kubernetes.io/part-of: overkilled-todo
        app.kubernetes.io/component: database
        app.kubernetes.io/managed-by: kustomize
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: mariadb
          image: mariadb:10.5.27
          ports:
            - containerPort: 3306
          readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
            - name: mysql-init
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
        - name: init-sql
          configMap:
            name: mariadb-init-sql
        - name: mysql-init
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/part-of: overkilled-todo
    app.kubernetes.io/component: database
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
