k8s/base/delete-service-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-service
  labels:
    app.kubernetes.io/name: delete-service
    app.kubernetes.io/part-of: overkilled-todo
    app.kubernetes.io/component: crud-service
    app.kubernetes.io/managed-by: kustomize
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delete-service
  template:
    metadata:
      labels:
        app: delete-service
        app.kubernetes.io/name: delete-service
        app.kubernetes.io/part-of: overkilled-todo
        app.kubernetes.io/component: crud-service
        app.kubernetes.io/managed-by: kustomize
    spec:
      containers:
        - name: delete-service
          image: delete-service:latest
          ports:
            - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: delete-service
  labels:
    app.kubernetes.io/name: delete-service
    app.kubernetes.io/part-of: overkilled-todo
    app.kubernetes.io/component: crud-service
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    app: delete-service
  ports:
    - protocol: TCP
      port: 5004
      targetPort: 5004
